tools/infrastructure/kubernetes/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supertool
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: supertool
